backend/device-service/deploy/device-service-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kiri-device-service-default
  namespace: kirilock
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kiri-device-service
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kirilock
      ports:
        - protocol: TCP
          port: 8080

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kirilock
      ports:
        - protocol: TCP
          port: 8080

    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 9092
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
